--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lodash": "^3.10.1",
     "md5": "^2.1.0",
     "moment": "^2.13.0",
+    "native-base": "^0.5.11",
     "react": "15.3.2",
     "react-native": "0.35.0",
     "react-native-navbar": "^1.5.4",
-    "reflux": "^0.4.1",
-    "react-native-sound": "^0.8.3"
+    "react-native-router-flux": "^3.36.0",
+    "react-native-sound": "^0.8.3",
+    "react-native-video": "^0.9.0",
+    "reflux": "^0.4.1"
   },
   "jest": {
     "preset": "jest-react-native"
