--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,8 +138,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':RNSound')
-    compile project(':react-native-video')
+    
     // If your app supports Android versions before Ice Cream Sandwich (API level 14)
     compile 'com.facebook.fresco:animated-base-support:0.11.0'
 
@@ -152,6 +151,11 @@ dependencies {
 
     // For WebP support, without animations
     compile 'com.facebook.fresco:webpsupport:0.11.0'
+
+    // For RNSound
+    compile project(':RNSound')
+    // For Video
+    compile project(':react-native-video')
 }
 
 // Run this once to be able to run the application with BUCK
