--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'agileapps'
 
-include ':RNSound', ':app', ':react-native-video'
+include ':RNSound', ':react-native-video', ':app'
 project(':RNSound').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sound/android')
 project(':react-native-video').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-video/android')
